--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -291,7 +291,7 @@ WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputMod
 UserDefinedStruct=
 Struct_Card=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 EdGraph=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
@@ -305,7 +305,7 @@ BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.Def
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 None=======
 None=======
 None=======
@@ -390,7 +390,7 @@ Remove Card From Visual Pile_3=PropertyWrapper.DefaultValueCategory.All Cards,Pr
 TargetPoint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,TargetPoint.Collision.Collision
 TargetPoint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,TargetPoint.TransformCommon.Transform,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Collision.Collision
 General Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-IDI Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+IDI Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 IDI Decide_3=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BPC_NPC_Choice_Scoring_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BPC_NPC_Decision_Mind_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
@@ -399,11 +399,13 @@ WidgetComponent=
 WBP_FaceCardPlayed_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 K2Node_SwitchInteger=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 TextBlock=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
-IDI Decide_2=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+IDI Decide_2=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+Doubt Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+Doubt Decide_8=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/NPCs/Decision_Making
-ContentBrowserTab1.SelectedPaths=/Game/UI/Diegetic/Main_Games
+ContentBrowserTab1.SelectedPaths=/Game/Shared_Game_Mechanics/Cards
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -1795,7 +1797,7 @@ K2Node_SwitchInteger="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 K2Node_Switch="\"Object\" "
-IDI Decide="\"Struct.Easy Difficulty Card Amount Weightings\" \"Struct.Expert Difficulty Card Amount Weightings\" "
+IDI Decide="\"Struct.Easy Difficulty Card Amount Weightings\" \"Struct.Expert Difficulty Card Amount Weightings\" \"Struct.Medium Difficulty Card Amount Weightings\" "
 IDI Decide_3="\"Struct\" "
 WidgetComponent="\"Object\" "
 WidgetComponent="\"Object\" "
@@ -1806,7 +1808,7 @@ TextBlock="\"Object\" "
 TextLayoutWidget="\"Object\" "
 WBP_FaceCardPlayed_C="\"Object\" "
 IDI Decide_2="\"Struct\" "
-BP_Turn_Manager_C="\"Object.Default.Playing Characters\" "
+BP_Turn_Manager_C=
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1823,7 +1825,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -1849,20 +1851,20 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decision_Mind
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
 OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
+OpenAssetsAtExit=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decision_Mind
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem1=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem2=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem3=/Game/NPCs/BP_NPC
-MRUItem4=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
-MRUItem5=/Game/UI/Diegetic/Main_Games/WBP_TextPopUp
-MRUItem6=/Game/Player/BP_Player
+MRUItem0=/Game/Player/BP_Player
+MRUItem1=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem5=/Game/NPCs/BP_NPC
+MRUItem6=/Game/UI/Diegetic/Main_Games/WBP_TextPopUp
 MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_Game_Rules
 MRUItem8=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
 MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
@@ -3316,7 +3318,7 @@ TargetPoint.LevelInstance=True
 /Game/ThirdPerson/Blueprints/BP_Player.BP_Player=0
 /Game/ThirdPerson/Blueprints/GM_Bar.GM_Bar=0
 /Game/NPCs/BP_NPC.BP_NPC=0
-/Game/NPCs/BP_NPC.BP_NPC=0
+/Game/NPCs/BP_NPC.BP_NPC=1
 /Game/Player/Input/Actions/IA_Jump.IA_Jump=0
 /Game/Player/Input/Actions/IA_Jump.IA_Jump=1
 /Game/Player/BP_Player.BP_Player=0
@@ -3363,7 +3365,7 @@ None=======
 /Game/Shared_Game_Mechanics/Cards/M_Card_Test.M_Card_Test=1
 /Game/NPCs/Decision_Making/BPC_NPC_Choice_Scoring.BPC_NPC_Choice_Scoring=1
 /Game/NPCs/Enum_Opponent_Difficulties.Enum_Opponent_Difficulties=0
-/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decision_Mind=0
+/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decision_Mind=1
 /Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent=1
 /Game/UI/Diegetic/Main_Games/WBP_Game_Rules.WBP_Game_Rules=1
 /Game/UI/Diegetic/Main_Games/WBP_TextPopUp.WBP_TextPopUp=0
@@ -3433,7 +3435,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=2237.000 Y=213.000
-ScreenPosition=X=328.000 Y=0.000
+ScreenPosition=X=2248.000 Y=0.000
 None=======
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
@@ -3467,8 +3469,8 @@ Project=C:/Program Files/Epic Games/UE_5.3/
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PathColor]
 /Game/LevelPrototyping=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
