Doubt Decide NPC functionality.
Local Variables for Reaction speed, accuracy, awareness, frequency and no info.
There are also local variables for the number of correct cards held by this NPC and the number of correct cards in the pile excluding those played in the previous round.

Reaction speed checks are done at the end of branches and are the final check between doubting and not doubting which is supposed to serve as the NPC being fast enough to doubt before the next player plays their cards.

Accuracy is how well the NPC can track how many cards of the correct type for the previous round are in the card pile.
Awareness is how often the NPC will take note of their own cards in relation to the cards that have just been played.
Frequency is the first check of how often the NPC will actually even attempt to doubt however even if this check fails there are some other checks that will happen that would make the NPC doubt anyway including if the NPC has 4 cards of the correct type which then leads to an awareness check which if passed then leads to a reaction speed test.
No info variables are used when frequency passes, we have no correct cards in hand and there are no correct cards in the pile. There are only no info checks for medium and easy difficulty with expert difficulty just proceeding to not doubt at that point.

It's all commented and decently complicated however there are only 4 main checks it just depends on their order and the information determining sometimes if it is a guaranteed doubt depending on the difficulty as well.

Also made this function private so it cannot be accessed by outside actors and so we only use the optional action decide function passing the correct variables for the game and difficulty. Will need to go through various actors and change their function access specifiers to have more data encapsulation and control over the data flow in the game as well as just generally making the game more professional programming-wise.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -321,7 +321,7 @@ Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.Defa
 SceneComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 SceneComponent=
 BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
@@ -335,7 +335,7 @@ BP_Card_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.Default
 Blueprint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 Check If Game Over=PropertyWrapper.DefaultValueCategory.All Cards
 Check If Game Over_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
@@ -359,7 +359,7 @@ InputAction=
 SphereComponent=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 Set Current Playing Game=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 TextRenderComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Doubt Check=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Doubt Check_7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -393,7 +393,7 @@ General Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.De
 IDI Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 IDI Decide_3=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BPC_NPC_Choice_Scoring_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-BPC_NPC_Decision_Mind_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+BPC_NPC_Decision_Mind_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 WidgetComponent=
 WBP_FaceCardPlayed_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
@@ -1826,10 +1826,10 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1856,17 +1856,18 @@ OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
 OpenAssetsAtExit=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decision_Mind
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/BP_Player
-MRUItem1=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
-MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem5=/Game/NPCs/BP_NPC
-MRUItem6=/Game/UI/Diegetic/Main_Games/WBP_TextPopUp
-MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_Game_Rules
-MRUItem8=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem0=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem1=/Game/Player/BP_Player
+MRUItem2=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem4=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem5=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem6=/Game/NPCs/BP_NPC
+MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_TextPopUp
+MRUItem8=/Game/UI/Diegetic/Main_Games/WBP_Game_Rules
 MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
 MRUItem10=/Game/Shared_Game_Mechanics/Cards/DT_Cards
 MRUItem11=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
